Oct 19 2003  3.1.0  Revamped data sanitizing in gpsmap and expat loaders to 
                     filter junk data effectively
                    Removed debug info and tweaked sensitivity of junk gps
                     filters
Oct 01 2003  3.1.0  Fixed pcap support on OSX, mostly
Sep 14 2003  3.1.0  Fixed clients not doing some timer events correctly (which
                     broke wsp100).  Process inheritance is annoying.
Sep 01 2003  3.1.0  De-walled some casting errors on some compilers
Aug 24 2003  3.1.0  Merged gpsmap speedup patch from Dennis Lubert
                    Fixed missing semicolon in CSV output
                    Merged configure patch from Stig Hackvan
Aug 11 2003  3.1.0  Tweaked capture children to show errors better
Aug 10 2003  3.1.0  Added extra/listchan.pl script to extract supported
                     channels, useful for building hopper lists for combo cards
                    Expanded capture process commands to 16 bits for 11a 
                     channels > 128
Aug 08 2003  3.1.0  Re-generated libpcap configure script to hopefully avoid 
                     configure issues on some platforms
Aug 08 2003  3.1.0  Started 3.1.0 devel cycle

Aug 08 2003  3.0.1  Released 3.0.1 stable.  No new major changes, but plenty of
                     bugfixes.

Aug 06 2003  3.0.1  Added cardtype initializer, might solve issue on arm
                    Added link to libstdc++ for compilers that don't link it
Aug 05 2003  3.0.1  Fixed capchildren failing on open not killing server
                    Fixed min/max gps coord tracking
Aug 04 2003  3.0.1  Added pcapfile capture source (nearly the same function as
                     wtapfile but doesn't need ethereal)
                    Merged panelfront gps fixes from mdmcl
Aug 03 2003  3.0.1  Added --help to kismet script
                    Fixed gps after breaking it yesterday
Aug 02 2003  3.0.1  Fixed alert protocol to use a \001 delimited string