@@ -1,3 +1,7 @@
+Oct 20 2003  3.1.0  Fixed double-allocation of imagemagick background records
+                     when loading from a file (gpsmap)
+                    No longer unlink base map file after generating map when
+                     it was found locally (gpsmap)
 Oct 19 2003  3.1.0  Revamped data sanitizing in gpsmap and expat loaders to 
                      filter junk data effectively
                     Removed debug info and tweaked sensitivity of junk gps
